k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kakaopay-app
  namespace: default
spec:
  type: NodePort
  selector:
    app: kakaopay-app
  ports:
  - port: 8080
    targetPort: 8080
